# elf-simulations

./: .gitignore  .pylintrc  README.md  analysis_longs_shorts.ipynb  analysis_longs_shorts.py  analysis_opener.py  analysis_pool.py  analysis_target_rate.py  anvil_crash.sh  anvil_crash2.sh  anvil_regular.sh  darkmode_orange.py  elfpy.plantuml  fmt.py  init.ipynb  init.py  init_variety.csv  profile_regular.json  pyproject.toml  requirements.txt  script_data.py  script_functions.py  script_imports.py  script_setup.py
.github/workflows/: test.yml
data/: acquire_state.py
elfpy/: __init__.py  agent.py  main.py  types.py
elfpy/agents/: __init__.py  agent.py  get_wallet_state.py  wallet.py
elfpy/agents/policies/: init_lp.py  lp_and_withdraw.py  no_action.py  random_agent.py  single_long.py  single_lp.py  single_short.py
elfpy/bots/: bot_config.py  get_config.py  get_env_args.py  sim_server.py
elfpy/data/: acquire_data.py
elfpy/errors/: errors.py
elfpy/eth/: transactions.py
elfpy/eth/abi/: load_all_abis.py
elfpy/markets/: base.py  borrow.py
elfpy/markets/hyperdrive/: hyperdrive_actions.py  hyperdrive_assets.py  hyperdrive_market.py
elfpy/policies/: init_lp.py  lp_and_withdraw.py  single_lp.py
elfpy/pricing_models/: __init__.py  base.py  hyperdrive.py  trades.py  yieldspace.py
elfpy/simulators/: __init__.py  simulators.py
elfpy/time/: __init__.py  time.py
elfpy/utils/: apeworx_integrations.py  format_number.py  logs.py  outputs.py  post_processing.py  price.py  sim_utils.py
elfpy/utils/math/: __init__.py  fixed_point.py  update_weighted_average.py
elfpy/wallet/: wallet.py
eth_bots/core/: execute_agent_trades.py
eth_bots/data/: acquire_data.py  convert_data.py  postgres.py
eth_bots/data/tests/: test_checkpoint.py  test_pool_config.py  test_transaction.py  test_wallet_deltas.py  test_wallet_info.py
eth_bots/streamlit/: calc_pnl.py  plot_fixed_rate.py  run_demo.py  test_demo.py
examples/: apeworx_everlasting_bots.py  darkmode_orange.py  evm_bots.py  example_main.py  market_state_demo.py  reading_data_demo.py  simple_ape.py  testy_bots.py
examples/eth_bots/: config.py  main.py  setup_experiment.py
examples/eth_bots/custom_policies/: betty.py  dbot.py  example_custom_policy.py
examples/hackweek_demo/: plot_fixed_rate.py  plot_pnl.py  run_demo.py
lib/agent0/agent0/: __init__.py  errors.py
lib/agent0/examples/: hyperdrive_agents.py  interactive_econ.py
lib/ethpy/ethpy/: eth_config.py
lib/pypechain/pypechain/: run_pypechain.py
src/data/: acquire_data.py
src/elfpy/: agent.py  markets.py  pricing_models.py  simulators.py  user.py  wallet.py
src/eth_bots/: eth_bots_config.py  fund_bots.py
tests/: bot_to_db_test.py  demo1.py  demo2.py  test_agents.py  test_borrow.py  test_close_short.py  test_config.py  test_freezable.py  test_logging.py  test_market.py  test_max_short.py  test_notebooks.py  test_parameters.py  test_sequential.py  test_sim.py  test_trade.py  utils_for_tests.py
tests/pricing_models/: calc_test_dataclasses.py  test_calc_in_given_out.py  test_calc_out_given_in.py  test_calc_spot_price.py  test_get_max.py  test_pricing_model_utils.py
tests/solidity/: test_add_liquidity.py  test_checkpoints.py  test_close_long.py  test_close_short.py  test_fees.py  test_initialize.py  test_open_long.py  test_open_short.py  test_remove_liquidity.py  test_withdraw_shares.py
tests/utils/: test_fixed_point.py  test_fixed_point_math.py  test_post_processing.py  test_price_utils.py  test_sim_utils.py  test_time_utils.py
tests_fp/pricing_models/: calc_test_dataclasses.py  test_calc_in_given_out_fp.py
(+50 files in other folders)
