[project]
name = "elfpy"
version = "0.1.0"
authors = [
    { name = "Dylan Paiton", email = "dylan@element.fi" },
    { name = "Jonny Rhea", email = "jonny@element.fi" },
    { name = "Mihai Cosma", email = "mihai@element.fi" },
    { name = "Alex Towle", email = "alex@element.fi" },
    { name = "Matthew Brown", email = "matt@element.fi" },
    { name = "Giovanni Effio", email = "mazygio@element.fi" },
    { name = "Patrick Morris", email = "patrick@element.fi" },
    { name = "Violet Vienhage", email = "violet@element.fi" },
]
description = "Experiment management and market simulators by Element Finance"
readme = "README.md"
requires-python = ">=3.9, <3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
]
line-length = "120"

[project.urls]
"Homepage" = "https://github.com/element-fi/analysis"
"Bug Tracker" = "https://github.com/element-fi/analysis/issues"

[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.pylint.format]
max-line-length = "120"

[tool.black]
line-length = "120"
extend-exclude = "\\.ipynb"

[tool.pyright]
exclude = ["hyperdrive_solidity"]

[tool.ruff]
# Default is: pycodestyle (E) and Pyflakes (F)
# We add flake8-builtins (A), pydocstyle (D), isort (I), pep8-naming (N), and pylint (PL).
# We remove pycodestyle (E) since it throws erroneous line too long errors.
# We remove Pyflakes (F) since it complains about `import *` which we need.
# select = ["A", "D", "I", "N", "PL"]
select = ["PL"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["PL"]
# fixable = [
#     "A",   # flake8-builtins
#     "B",   # flake8-bugbear
#     "C4",  # flake8-comprehensions (not C)
#     "D",   # pydocstyle
#     "E",   # pycodestyle
#     "F",   # pyflakes
#     "G",   # flake8-logging-format
#     "I",   # isort
#     "N",   # pep8-naming
#     "Q",   # flake8-quotes
#     "S",   # flake8-bandit
#     "W",   # pycodestyle warnings
#     "ANN", # flake8-annotations
#     "ARG", # flake8-unused-arguments
#     "BLE", # flake8-blind-except
#     "COM", # flake8-commas
#     "DJ",  # flake8-django
#     "DTZ", # flake8-datetimez
#     "EM",  # flake8-errmsg
#     "ERA", # flake8-eradicate
#     "EXE", # flake8-executable
#     "FBT", # flake8-boolean-trap
#     "ICN", # flake8-import-conventions
#     "INP", # flake8-no-pep420
#     "ISC", # flake8-implicit-str-concat
#     "NPY", # NumPy-specific rules
#     "PD",  # pandas-vet
#     "PGH", # pygrep-hooks
#     "PIE", # flake8-pie
#     "PL",  # pylint
#     "PT",  # flake8-pytest-style
#     "PTH", # flake8-use-pathlib
#     "PYI", # flake8-pyi
#     "RET", # flake8-return
#     "RSE", # flake8-raise
#     "RUF", # Ruff-specific rules
#     "SIM", # flake8-simplify
#     "SLF", # flake8-self
#     "TCH", # flake8-type-checking
#     "TID", # flake8-tidy-imports (not T)
#     "TRY", # tryceratops
#     "UP",  # pyupgrade
#     "YTT", # flake8-2020
# ]
unfixable = []

exclude = ["hyperdrive_solidity", "docs"]

per-file-ignores = { "elfpy/utils/math/fixed_point.py" = [
    "A003",
], "tests/*" = [
    "PLR2004",
] }

# Ignore builtins in elfpy/utils/math/fixed_point.py
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.9.
target-version = "py39"
